--- a/releases/traefik.yaml
+++ b/releases/traefik.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   releaseName: traefik
   chart:
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://helm.traefik.io/traefik
     name: traefik
     version: 9.15.21
   values:
