--- a/releases/traefik.yaml
+++ b/releases/traefik.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     repository: https://helm.traefik.io/traefik
     name: traefik
-    version: 2.4.6
+    #version: 2.4.6
   values:
     service:
       spec:
