--- a/workloads/kuard.yaml
+++ b/workloads/kuard.yaml
@@ -57,7 +57,7 @@ metadata:
 spec:
   routes:
   - kind: Rule
-    match: "(Host(`kuard.52.171.122.235.nip.io`) && Headers(`app`, `kuard`))"
+    match: "(Host(`kuard.52.171.122.235.nip.io`) && Headers(`app`, `kuard2`))"
     priority: 10
     middlewares:
     - name: ipwhitelist
