--- a/workloads/kuard.yaml
+++ b/workloads/kuard.yaml
@@ -60,7 +60,7 @@ spec:
   routes:
   - kind: Rule
     #match: "(Host(`kuard.52.171.122.235.nip.io`))"
-    match: "(Host(`kuard.52.171.122.235.nip.io`) && Headers(`app`, `kuard2`))"
+    match: "(Host(`kuard.52.171.122.235.nip.io`) && Headers(`app`, `tommy`))"
     priority: 10
     middlewares:
     - name: ipwhitelist
